[package]
name = "poker_rust"
version = "0.1.0"
authors = ["Christopher Bowron <cwbowron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.18.0"
strum_macros = "0.18.0"
rand = "0.7.3"
itertools = "0.9"
